--- a/eveAPI/hello2.html
+++ b/eveAPI/hello2.html
@@ -2,7 +2,7 @@
 <html>
     <head><title>Looks like that worked</title></head>
     <body>
-        <p>Hello, authenticated world!</p>
+        <h1>Hello {{.Name}}</h1>
         <a href="api">Try an api call maybe?</a>
     </body>
 </html>
