--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,10 +4,7 @@
         <title>Hello, world!</title>
     </head>
     <body>
-        <h1>Hello, world!</h1>
-        <p>Hello! This is the latest iteration of my personal website.</p>
-        <p>Currently, I'm playing with websockets.</p>
         <div id="script"></div>
-        <script src="ws.js" defer></script>
+        <script defer src="eve.js"></script>
     </body>
 </html>
