Include the content from the old site

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Hello, world!</title>
-    </head>
-    <body>
-        <div id="script"></div>
-        <script defer src="eve.js"></script>
-    </body>
+
+<head>
+	<title>Hello, world</title>
+	<meta name="author" content="Osric Wilkinson" />
+	<meta name="description" content="The personal site of Osric Wilkinson" />
+</head>
+
+<body>
+	<div class="quote">
+		<p>This place is a message...and part of a system of messages...pay
+			attention to it!</p>
+
+		<p>Sending this message was important to us. We considered ourselves to be
+			a powerful culture.</p>
+
+		<p>This place is not a place of honour...no highly esteemed dead is
+			commemorated here...nothing valued is here.</p>
+
+		<p class="attrib">Trauth, K., S.C. Hora and R.V. Guzowski., (1992)
+			<em><a href="http://prod.sandia.gov/techlib/access-control.cgi/1992/921382.pdf">Expert
+					Judgement on Markers to Deter Inadvertent Human Intrusion into the Waste
+					Isolation Pilot Plant</a></em>, SAND92-1382, Sandia National
+			Laboratories</p>
+	</div>
+	<p>Hello, and welcome to the personal website of <a title="My email address. Why yes, I do have good spam filters"
+		 href="mailto:webmoose@fluffypeople.com">Osric Wilkinson</a>.</p>
+	<p>I am a human, from Earth. I'm male, about 6 foot tall, with short dark hair. I'm very happily married.
+		I write software for fun, and as my day job.</p>
+	<p>This site is currently hosting:</p>
+	<ul>
+		<li>A tool to help me in <a href="eve.html">Eve Online</a></li>
+		<li>My <a href="tools/password.html">password generator</a></li>
+		<li>The guide to my <a href="articles/maat.html">firewall</a></li>
+	</ul>
+<p>The site content is written and served using various tools including (but not limited to)
+		<a href="http://www.vim.org/">vim</a>,
+		and the fantastic service sold by
+		<a href="https://www.bytemark.co.uk/">Bytemark</a>.</p>
+
+</body>
+
 </html>
