--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -3,8 +3,9 @@
 
 <head>
 	<title>Hello, world</title>
-	<meta name="author" content="Osric Wilkinson" />
-	<meta name="description" content="The personal site of Osric Wilkinson" />
+	<meta name="author" content="Osric Wilkinson" >
+	<meta name="description" content="The personal site of Osric Wilkinson" >
+	<link rel="stylesheet" type="text/css" href="css/core.css" >
 </head>
 
 <body>
@@ -26,7 +27,7 @@
 	</div>
 	<p>Hello, and welcome to the personal website of <a title="My email address. Why yes, I do have good spam filters"
 		 href="mailto:webmoose@fluffypeople.com">Osric Wilkinson</a>.</p>
-	<p>I am a human, from Earth. I'm male, about 6 foot tall, with short dark hair. I'm very happily married.
+	<p>I am a human, from Earth. I'm male, about 6 foot tall with short dark hair. I'm very happily married.
 		I write software for fun, and as my day job.</p>
 	<p>This site is currently hosting:</p>
 	<ul>
