--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -31,7 +31,7 @@
 		I write software for fun, and as my day job.</p>
 	<p>This site is currently hosting:</p>
 	<ul>
-		<li>A tool to help me in <a href="eve.html">Eve Online</a></li>
+		<li>A tool to help me in <a href="/eve/index.html">Eve Online</a></li>
 		<li>My <a href="tools/password.html">password generator</a></li>
 		<li>The guide to my <a href="articles/maat.html">firewall</a></li>
 	</ul>
